# birdcpp

./: .gitmodules  CMakeLists.txt  README.md
src/: application.cpp  application.h  dialogs.cpp  dialogs.h  file_manager.cpp  file_manager.h  internals.cpp  internals.h  main.cpp  panels.cpp  panels.h
src/backends/imgui/: imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
